# SimpleTests

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
test/: CMakeLists.txt
test/tests/: CMakeLists.txt
test/tests/bools/: false_test.cpp  false_test_wf.cpp  true_test.cpp  true_test_wf.cpp
test/tests/strings/: equals.cpp  equals_wf.cpp
