cmake_minimum_required(VERSION 3.18)
project(SimpleTests VERSION 1.0)

# ------------------------------------------------------------------------------------------------
# Enable Testing
# ------------------------------------------------------------------------------------------------
enable_testing()

add_subdirectory(tests)